--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_request_permission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/button_request_permission"
+        app:layout_constraintEnd_toEndOf="@+id/notification_button"
+        app:layout_constraintStart_toStartOf="@+id/notification_button"
+        app:layout_constraintTop_toBottomOf="@+id/notification_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
